--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-bootstrap": "^1.0.0",
+    "react-fontawesome": "^1.7.1",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "react-sliding-pane": "^4.0.1",
+    "react-sliding-side-panel": "^1.0.13",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
